--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": ">=1.7.7",
+    "axios": "^1.12.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
@@ -40,7 +40,7 @@
     "sass": "^1.80.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
-    "vite": "^7.0.5",
+    "vite": "^7.0.8",
     "vite-plugin-vue-devtools": "^7.6.4",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.0.3"
